Fixed issue where projects link wasnt shown on iphone

--- a/src/components/Main/Splash/style.css
+++ b/src/components/Main/Splash/style.css
@@ -31,6 +31,7 @@
   flex-direction: column;
   align-items: center;
   bottom: 2rem;
+  margin-top: -40px;
   --max-size: 32;
   --min-size: 26;
   font-size: var(--responsive);
@@ -45,9 +46,14 @@
   font-variation-settings: 'wght' 800, 'SPAC' 100;
 }
 
-
-@media screen and (max-height: 560px) {
+@media screen and (max-height: 700px) {
   #splash {
-    height: 560px;
+    height: 700px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .scroll-btn {
+    bottom: 12rem;
   }
 }
